# gears-lang

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ast.rs  compiler.rs  errors.rs  lexer.rs  lib.rs  module.rs  object.rs  opcodes.rs  parser.lalrpop  symbol.rs  vm.rs
tests/: grammar.rs  test_assignment.rs  test_branching.rs  test_compare.rs  test_function.rs  test_math.rs  test_strings.rs  test_types.rs
tests/files/: assignment.gs  branching.gs  comparison.gs  function.gs  math.gs  strings.gs
