[package]
name = "gears_lang"
version = "0.1.0"
authors = ["Andrew Grzeszczak <andrew.grzeszczak@blocksixanalytics.com>"]
build = "build.rs" # LALRPOP preprocessing

# Add a dependency on the LALRPOP runtime library:
[build-dependencies]
lalrpop = "0.16.0"

[dependencies]
lalrpop-util = "0.16.0"
regex = "0.2.1"

[dev-dependencies]
cached = "0.7.0"
lazy_static = "^1"
